# ev-charging-intelligence

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  collect-data.yml
scripts/: collect_snapshot.py
src/ev_charging/: __init__.py  analysis.py  api_client.py  availability.py  config.py  history.py
tests/: test_history.py
