[project]
name = "ev-charging-intelligence"
version = "0.1.0"
description = "Análisis de infraestructura de carga EV en Chile — API integration + data analysis"
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
